<resources>
    <string name="app_name">ECOway 2.0</string>
    <string name="main_arrive_at">ARRIVE AT</string>
    <string name="main_current_position">- Your location -</string>
    <string name="preparation_default_value">PREP 0 MIN</string>
    <string name="travel_time_default_value">TRAVEL 0 MIN</string>
    <string name="travel_time_text">TRAVEL %1$s</string>
    <string name="start">START</string>
    <string name="time_default_value">00:00</string>
    <string name="time_default_value_hour">0h</string>
    <string name="countdown_timer_hour">%1$dh</string>
    <string name="time_default_value_min">0 min</string>
    <string name="countdown_timer_min">%1$d min</string>
    <string name="time_default_value_sec">0 sec</string>
    <string name="countdown_timer_sec">%1$d sec</string>
    <string name="main_am_pm_default_value">AM</string>
    <string name="main_am_value">AM</string>
    <string name="main_pm_value">PM</string>
    <string name="button_ok">OK</string>
    <string name="preparation_indicator_info">%d MIN PREP</string>
    <string name="dialog_recalculation_info">Route recalculated due to change in traffic: %1$s</string>
    <string name="dialog_recalculation_no_changes">No additional traffic delay.</string>
    <string name="dialog_start_preparation_text">Only %1$d minutes left, time to prepare!</string>
    <string name="toast_error_message_error_getting_location">Error getting your location. %1$s</string>
    <string name="toast_error_message_cannot_find_route">Error finding the route for specified conditions.</string>
    <string name="waiting_for_the_results">Waiting for the results…</string>
    <string name="toolbar_menu_help">Help</string>
    <string name="shared_preference_name">PREFERENCE</string>
    <string name="shared_preference_first_run">isFirstRun</string>
    <string name="location_permissions_denied">Location permissions request has been denied.</string>
    <string name="about_app">This app is to find route between two locations. and will give suggestions based on time and route</string>
    <string name="about_title">@string/app_name</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_here">Login here</string>
    <string name="empty_creditionals">Inputs should not be empty</string>
    <string name="invalid_creditionals">Invaild username or password</string>
    <string name="login_success">Hi %1$s… Welcome…</string>
    <string name="menu_option_permit">Trucking permit</string>
    <string name="menu_option_food_bank">Food bank</string>
    <string name="route_type">Route Type</string>
    <string name="travel_mode">Travel Mode</string>
    <string name="vehicle_load_type">Vehicle Load Type</string>
    <string name="weight">Weight</string>
    <string name="weight_kgs">Weight (kgs)</string>
    <string name="length">Length</string>
    <string name="length_meters">Length (meters)</string>
    <string name="height">Height</string>
    <string name="height_meters">Height (meters)</string>
    <string name="width">Width</string>
    <string name="width_meters">Width (meters)</string>
    <string name="arrive_at">Arrive At</string>
    <string name="depart_at">Depart At</string>
    <string name="feedback_email">fllteamwarriors@gmail.com</string>
    <string name="select_from_location">Please select from location</string>
    <string name="select_to_location">Please select to location</string>
    <string name="type_location">Type location</string>
    <string name="enter_location">Enter location</string>
    <string name="navigation_stoped">Navigation stoped...</string>
    <string name="navigation_started">Navigation started...</string>
    <string name="map_matching">Map matching</string>
    <string name="map_matching_subtitle">GPS matched to the given route</string>
    <string name="route_matching">route_matching</string>
    <string name="route_matching_subtitle">route_matching_subtitle</string>
    <string name="chevron_tracking">chevron_tracking</string>
    <string name="chevron_tracking_subtitle">chevron_tracking_subtitle</string>
    <string name="chevron_tracking_start">chevron_tracking_start</string>
    <string name="chevron_tracking_stop">chevron_tracking_stop</string>
    <string name="matching_description">matching_description</string>

    <string name="distance_km">%1$d km</string>
    <string name="distance_miles">%1$.2f miles</string>
    <string name="distance_m">%1$f m</string>
    <string name="list_empty">List empty. Please try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- About tab -->
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="changelog">Changelog</string>
    <string name="translator"></string>
    <string name="about_version_label">Version</string>
    <string name="about_source_label">Source code</string>
    <string name="about_libraries_label">Used libraries</string>

    <!-- Navigation -->
    <string name="nav_geometry">Geometry</string>
    <string name="nav_about">About</string>
    <string name="nav_reward">Material Design </string>
    <string name="nav_bank">Nearest Bank</string>
    <string name="nav_tips">Recycler Tips</string>

    <string name="details">Details</string>
    <string name="version_app">1.0.0</string>
    <string name="tips">
        1. Pilah Sampah berdasarkan kategorinya organik / anorganik \n\n
        2. Kreasikan sampah tersebut menjadi barang yang dapat digunakan kembali\n\n
        3. Dan anda bisa promosikan atau menjual ke teman anda\n\n
        4. Anda bisa saja mengirimkan sampah anda ke bank sampah terdekat melalui samita agar dapat diproses
    </string>
    <string name="layout">Layout</string>
    <string name="deskripsi">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars. They form a group of plants that can be erect shrubs.</string>
    <string name="nav_home">Home</string>

    <string name="aboutme">UX / UI Mobile Application\nFront-End Android Developer</string>
    <string name="menu_home">Home</string>
    <string name="menu_leader_board">Leaderboard</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="echo">Echo</string>
    <string name="fastest">Fastest</string>
    <string name="shortest">Shortest</string>
    <string name="welcome">Welcome</string>
    <string name="maneuvers_list">Maneuvers List</string>

    <string name="rating_icons_title">Please rate your experience with the app</string>
    <string name="rating_comments_title">Comments</string>
    <string name="rating_email_title">Enter your email for us to get back to you</string>
    <string name="rating_submit">Submit Feedback</string>
    <string name="thank_you_title">Thank you for your feedback...</string>
    <string name="back">Back</string>

</resources>
