<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_cube_outline_black_48dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_leader_board"
            android:icon="@drawable/ic_format_line_style_black_48dp"
            android:title="@string/menu_leader_board" />

        <item
            android:id="@+id/nav_permit"
            android:icon="@drawable/ic_format_line_style_black_48dp"
            android:title="@string/menu_option_permit" />
        <item
            android:id="@+id/nav_food_bank"
            android:icon="@drawable/ic_message_text_outline_black_48dp"
            android:title="@string/menu_option_food_bank" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_message_text_outline_black_48dp"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_message_text_outline_black_48dp"
            android:title="@string/menu_feedback" />
    </group>
</menu>
