<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:orderInCategory="101"
        android:title="@string/abc_action_menu_overflow_description"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_permit"
                android:icon="@drawable/ic_outline_permit_24"
                android:title="@string/menu_option_permit" />
            <item
                android:id="@+id/menu_food_bank"
                android:icon="@drawable/ic_baseline_food_bank_24"
                android:title="@string/menu_option_food_bank" />
            <item
                android:id="@+id/toolbar_menu_help"
                android:icon="@drawable/ic_ionicons_svg_md_help"
                android:title="@string/toolbar_menu_help" />
        </menu>
    </item>

</menu>