<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llFeedBackContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        style="@style/style_label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_xxxlarge"
        android:text="@string/rating_icons_title" />

    <RatingBar
        android:id="@+id/rbFeedback"
        android:numStars="5"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"/>

    <TextView
        style="@style/style_label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/rating_comments_title" />

    <EditText
        android:id="@+id/edtComments"
        style="@style/style_edit_text_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/style_label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/rating_email_title" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/style_edit_text_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnFeedbackSubmit"
        style="@style/style_app_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_button_height"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/rating_submit" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llThankYouContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center">
        <TextView
            android:id="@+id/txtThankYou"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/style_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:text="@string/thank_you_title" />
        <TextView
            android:id="@+id/txtBack"
            style="@style/style_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtThankYou"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/back" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/txtBack"
            app:layout_constraintStart_toStartOf="@+id/txtBack"
            app:layout_constraintEnd_toEndOf="@+id/txtBack"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>