<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountdownActivity">

    <include
        android:id="@+id/custom_toolbar"
        android:visibility="gone"
        layout="@layout/custom_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_countdown_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_elevation_main"
        android:elevation="@dimen/elevation_small"
        android:paddingBottom="@dimen/spacing_xxlarge"
        android:paddingTop="@dimen/spacing_xxlarge"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/mapFragment"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_countdown_timer_hour"
            android:fontFamily="@font/gotham_medium"
            android:textSize="@dimen/text_xxxlarge"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:text="@string/time_default_value_hour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_countdown_timer_minute"
            android:fontFamily="@font/gotham_medium"
            android:textSize="@dimen/text_xlarger"
            android:textColor="@color/color_countdown_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/time_default_value_min"
            app:layout_constraintStart_toEndOf="@+id/text_view_countdown_timer_hour"
            app:layout_constraintTop_toTopOf="@+id/text_view_countdown_timer_hour" />

        <TextView
            android:id="@+id/text_view_countdown_timer_second"
            android:fontFamily="@font/gotham_medium"
            android:textSize="@dimen/text_small"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:text="@string/time_default_value_sec"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_countdown_timer_hour"
            app:layout_constraintStart_toEndOf="@+id/text_view_countdown_timer_hour" />

        <ImageView
            android:id="@+id/img_countdown_by_what"
            android:layout_width="@dimen/countdown_by_what_width"
            android:layout_height="@dimen/countdown_by_what_height"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_countdown_timer_hour"
            app:srcCompat="@drawable/button_main_travel_mode_car" />

        <TextView
            android:id="@+id/text_countdown_travel_time"
            style="@style/style_countdown_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_super_tiny"
            android:background="@color/color_countdown_dark_grey"
            android:paddingBottom="@dimen/spacing_tiny"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_tiny"
            android:text="@string/travel_time_default_value"
            app:layout_constraintStart_toStartOf="@+id/text_view_countdown_timer_hour"
            app:layout_constraintTop_toBottomOf="@+id/text_view_countdown_timer_hour" />

        <TextView
            android:id="@+id/text_countdown_preparation"
            style="@style/style_countdown_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_countdown_green_preparation"
            android:paddingBottom="@dimen/spacing_tiny"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_tiny"
            android:text="@string/preparation_default_value"
            app:layout_constraintStart_toEndOf="@+id/text_countdown_travel_time"
            app:layout_constraintTop_toTopOf="@+id/text_countdown_travel_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.tomtom.online.sdk.map.MapFragment"
        android:layout_width="@dimen/size_none"
        android:layout_height="@dimen/size_none"
        android:layout_marginTop="@dimen/size_none"
        app:layout_constraintBottom_toBottomOf="@+id/llBottomOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_countdown_timer"/>

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="@dimen/spacing_normal"
        app:tint="@color/color_green_focused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imgManeuversList"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        android:src="@drawable/ic_baseline_view_list_24"
        android:layout_marginBottom="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="@+id/imgNavigation"
        app:layout_constraintBottom_toTopOf="@id/imgNavigation"
        app:layout_constraintStart_toStartOf="@+id/imgNavigation"
        app:tint="@color/color_green_focused" />

    <ImageView
        android:id="@+id/imgNavigation"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        android:src="@drawable/ic_baseline_navigation_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llBottomOptions"
        android:layout_margin="@dimen/spacing_large"
        app:tint="@color/color_green_focused"/>

    <LinearLayout
        android:id="@+id/llBottomOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btnEcho"
            style="@style/style_app_button_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/app_button_height_small"
            android:text="@string/echo" />
        <Button
            android:id="@+id/btnFastest"
            style="@style/style_app_button_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_height="@dimen/app_button_height_small"
            android:text="@string/fastest" />
        <Button
            android:id="@+id/btnShortest"
            style="@style/style_app_button_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_height="@dimen/app_button_height_small"
            android:text="@string/shortest" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>